@@ -1,0 +1,15 @@
+# avr simulator testsuite
+
+if [istarget avr-*] {
+    # all machines
+    set all_machs "avr"
+
+    foreach src [lsort [glob -nocomplain $srcdir/$subdir/*.s]] {
+	# If we're only testing specific files and this isn't one of them,
+	# skip it.
+	if ![runtest_file_p $runtests $src] {
+	    continue
+	}
+	run_sim_test $src $all_machs
+    }
+}
