@@ -1,3 +1,7 @@
+2015-03-28  Mike Frysinger  <vapier@gentoo.org>
+
+	* configure: Regenerate.
+
 2015-03-28  James Bowman  <james.bowman@ftdichip.com>
 
 	* configure: Regenerate.
