@@ -1,0 +1,3 @@
+2015-03-28  Mike Frysinger  <vapier@gentoo.org>
+
+	* pass.s, allinsn.exp, testutils.inc: New files.
