@@ -1,3 +1,8 @@
+2015-03-28  Mike Frysinger  <vapier@gentoo.org>
+
+	* configure: Regenerate.
+	* configure.tgt (avr*-*-*): Set sim_testsuite=yes.
+
 2015-03-28  James Bowman  <james.bowman@ftdichip.com>
 
 	* configure.tgt: Add FT32 entry.
